Clean up StateMachine